apps/routers/commitstew-staging/commitstew-com-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: commitstew-com
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`giovanni.commitstew.com`,`nwinter.commitstew.com`,`alys.commitstew.com`,`dan.commitstew.com`,`xenocid.commitstew.com`,`jordan.commitstew.com`,`alys.commitstew.com`,`dan.commitstew.com`,`xenocid.commitstew.com`,`jordan.commitstew.com`,`brian.commitstew.com`,`nick.commitstew.com`,`alex.commitstew.com`,`clarissa.commitstew.com`,`luke.commitstew.com`,`mike.commitstew.com`,`max.commitstew.com`,`jay.commitstew.com`,`sergii.commitstew.com`,`cole.commitstew.com`,`forrest.commitstew.c [...]
    services:
    - name: commitstew-com
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
